<resources>
    <string name="app_name">萌友会</string>
    <string name="network_unavailable">当前无可用网络</string>
    <string name="input_user_name">输入您的账号</string>
    <string name="input_pass_word">输入您的登录密码</string>
    <string name="save_password">记住密码</string>
    <string name="login">登    录</string>
    <string name="registered">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="share_login">第三方等录</string>
    <string name="account">账号</string>
    <string name="your_phone_number">你的手机号</string>
    <string name="to_obtain_code">获取验证码</string>
    <string name="your_verification_code">请输入短信验证码</string>
    <string name="verification_code">验证码</string>
    <string name="your_password">请输入您的密码</string>
    <string name="commite_your_password">确认密码</string>
    <string name="commite_password">确认密码</string>
    <string name="commite_modify">确认修改</string>
    <string name="login_">登录</string>
    <string name="modify_the_password">修改密码</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="empty_error">请输入完整...</string>
    <string name="home_page">首页</string>
    <string name="near">附近</string>
    <string name="chat">聊天</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="input_prompt">请输入关键字</string>
    <string name="finish">再按一次退出程序</string>
    <string name="login_out">退出</string>
    <string name="history_search">历史搜索</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热门搜索</string>
    <string name="city">城市</string>
    <string name="dynamic">动态</string>
    <string name="people_nearby">附近人</string>
    <string name="group">组团</string>
    <string name="all">全部</string>
    <string name="stay_a_team">待成团</string>
    <string name="stay_consumption">待消费</string>
    <string name="already_consumption">已消费</string>
    <string name="my_dynamic">我的动态</string>
    <string name="service_phone">客服电话</string>
    <string name="about_me">关于我们</string>
    <string name="help">帮助</string>
    <string name="user_photo">头像</string>
    <string name="nice_name">昵称</string>
    <string name="gender_boy">男</string>
    <string name="gender_girl">女</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="zero">0岁</string>
    <string name="id">ID</string>
    <string name="not_change">(不可修改)</string>
    <string name="personal">个人信息</string>
    <string name="the_editor">编辑</string>
    <string name="save">保存</string>
    <string name="select_age">选择年龄</string>
    <string name="confirm">确认</string>
    <string name="select_gender">选择性别</string>
    <string name="at_the_age">岁</string>
    <string name="input_nick_name_prompt">请输入昵称</string>
    <string name="to_score">去评分</string>
    <string name="to_up_version">去更新</string>
    <string name="immediately_call">立刻拨打</string>
    <string name="cancle">取消</string>
    <string name="or_call">是否拨打 :</string>
    <string name="release_new_dynamic">发布动态</string>
    <string name="release">发布</string>
    <string name="share_news">分享新鲜事</string>
    <string name="dynamic_or_save">是否保存当前编辑内容 ?</string>
    <string name="photo_or_remover">是否放弃上传这张照片 ?</string>
    <string name="pub">酒吧</string>
    <string name="ktv">KTV</string>
    <string name="about">更多</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="per_capita">人均  :</string>
    <string name="service_project">服务  :</string>
    <string name="there_are_no_more">没有更多</string>
    <string name="announcement">公告</string>
    <string name="announcement_content">公告内容</string>
    <string name="search_empty_content">未能检索到内容</string>
    <string name="or_empty_serach_history">是否清空历史搜索记录</string>
    <string name="score">评分</string>
    <string name="per_capita_concise">人均</string>
    <string name="distance">距离</string>
    <string name="hot_merchants">热门商户</string>
    <string name="merchants_content">商家详情</string>
    <string name="in_the_group">组团中</string>
    <string name="to_view_more">查看更多</string>
    <string name="service">服务</string>
    <string name="user_evaluation">用户评价</string>
    <string name="initiate_group">发起组团</string>
    <string name="distance_you">距您</string>
    <string name="details">详情</string>
    <string name="composition">成团</string>
    <string name="gap">还差</string>
    <string name="the_contact">联系人</string>
    <string name="the_contact_phone">联系电话</string>
    <string name="the_activity_time">活动时间</string>
    <string name="the_number_of_groups">组团人数</string>
    <string name="group_amount">组团金额</string>
    <string name="as_of_the_date">组团截止时间</string>
    <string name="activity_needs">活动需求</string>
    <string name="immediately_pay">立即支付</string>
    <string name="a_group">发起组团</string>
    <string name="the_activity_start_date">请选择活动开始时间</string>
    <string name="select_as_of_the_date">请选择组团截止时间</string>
    <string name="input_the_contact">请输入联系人</string>
    <string name="input_the_contact_phone">请输入联系电话</string>
    <string name="input_group_amount">请输入组团金额</string>
    <string name="people">人</string>
    <string name="gender_boy_number">男性人数</string>
    <string name="gender_girl_number">女性人数</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="activity_time_is_empty">请先选择活动时间</string>
    <string name="activity_time_is_min">截止时间不可早于活动时间</string>
    <string name="the_contact_empty">请填写联系人</string>
    <string name="the_contact_phone_empty">请正确填写联系人电话</string>
    <string name="group_amount_empty">请填写组团金额</string>
    <string name="group_amount_min">低于最低参团标准</string>
    <string name="people_is_empty">请添加活动人数</string>
    <string name="the_activity_time_min">活动时间不可早于当前时间</string>
    <string name="multiple_error">组团金额必须为基础人数的倍数</string>
    <string name="confirm_pay">确认支付</string>
    <string name="select_payment_method">选择支付方式</string>
    <string name="pay_number">支付金额</string>
    <string name="activity_time_is_min_min">截止时间不可早于当前时间</string>
    <string name="cancelled">已取消</string>
    <string name="to_be_paid">待支付</string>
    <string name="members_of_the_group">组团成员</string>
    <string name="group_complete">成团</string>
    <string name="group_funds">组团资金</string>
    <string name="researchers_have_full">人员已满</string>
    <string name="for_the_rest_of">剩余时间</string>
    <string name="initiate_group_successful">发起组团成功</string>
    <string name="no_single">免单</string>
    <string name="in_group_chat">进入群聊</string>
    <string name="tuxedo_immediately">立即参团</string>
    <string name="order_content">订单详情</string>
    <string name="bill_allocation_error">买单分配错误</string>
    <string name="empty_content">当前没有内容</string>
    <string name="invite_friends">邀请好友</string>
    <string name="consumption_date">消费时间</string>
    <string name="cancelled_date">取消时间</string>
    <string name="the">在</string>
    <string name="action_content">发起活动组团,活动时间</string>
    <string name="the_yuan">元</string>
    <string name="difference">还差</string>
    <string name="tuxedo_immediately_again">重新参团</string>
    <string name="the_order_no">订单编号</string>
    <string name="a_group_time">发起组团时间</string>
    <string name="a_group_successful_time">组团成功时间</string>
    <string name="complete">完成</string>
    <string name="or_the_invitation">是否邀请</string>
    <string name="empty_select">还未选择</string>
    <string name="submitted_successfully">提交成功</string>
    <string name="cancle_order">取消订单</string>
    <string name="evaluation_order">评价订单</string>
    <string name="order_status">订单状态</string>
    <string name="the_refund_amount">退款金额</string>
    <string name="commite_cancle">确认取消</string>
    <string name="or_cancle_older">是否确认取消订单</string>
    <string name="order_cancle_successful">订单取消成功</string>
    <string name="service_experience">服务体验</string>
    <string name="action_feeling">说说你能对此次活动的感受吧！</string>
    <string name="order_evaluation">订单评价</string>
    <string name="commite">提交</string>
    <string name="evaluation_successful">提交评价成功</string>
    <string name="for_a_refund">待退款</string>
    <string name="refund_out_time_error">如退款超时未处理,请及时联系客服</string>
    <string name="cancel_order_time">取消订单时间:</string>
    <string name="refund_pay_number">退款金额:</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="refund_content">退款详情</string>
    <string name="waiting_to_be_processed">请等待后台处理</string>
    <string name="waiting_to_be_processed_about">退款金额将在3-5个工作日退回至原账户</string>
    <string name="friends">好友</string>
    <string name="prosecution">请填写检举内容</string>
    <string name="to_report_success">投诉成功</string>
    <string name="send">发送</string>
    <string name="input_reply">写回复</string>
    <string name="reply">回复 :</string>
    <string name="the_end">T  H  E       E  N  D</string>
    <string name="there_is_no_limit">不限</string>
    <string name="detailed_information_on">详细资料</string>
    <string name="personal_space">的个人空间</string>
    <string name="tuxedo">参  团</string>
    <string name="money">金额</string>
    <string name="add_friend">加好友</string>
    <string name="say_hello">打招呼</string>
    <string name="in_chat">进入聊天</string>
    <string name="stay_evaluation_order">待评价</string>
    <string name="not_paid">未支付</string>
    <string name="order_cancelled">组团已取消</string>
    <string name="tuxedo_successful">参团成功</string>
    <string name="have_to_pay">已支付</string>
    <string name="group_activities">活动详情</string>
    <string name="modify">修改</string>
    <string name="change_group">修改组团信息</string>
    <string name="change_group_successful">修改组团信息成功</string>
    <string name="nice_name_empty">请输入昵称</string>
    <string name="the_signature">个性签名</string>
    <string name="the_signature_about">个性签名编写</string>
    <string name="brithday">生日</string>
    <string name="choose_birthday">生日选择</string>
    <string name="up_load_file_error">上传头像失败</string>
    <string name="change_personal_successful">更新个人信息成功</string>
    <string name="release_successful">发布成功</string>
    <string name="or_the_delet_dynamic">是否删除这条动态</string>
    <string name="empty_phone_number">请填写手机号</string>
    <string name="seconds_about">秒</string>
    <string name="empty_verification_code">验证码为空</string>
    <string name="error_verification_code">验证码错误</string>
    <string name="empty_pass_word">密码为空</string>
    <string name="error_pass_word">密码不匹配</string>
    <string name="change_successful">修改成功</string>
    <string name="registered_successful">注册成功</string>
    <string name="or_login_out">是否退出登录</string>
    <string name="merchants_group">在线组团</string>
    <string name="merchants_comments">商家评价</string>
    <string name="wechat_pay">微信支付</string>
    <string name="zfb_pay">支付宝支付</string>
    <string name="tuxedo_cost">参团费用</string>
    <string name="pay_status_no">支付成功,“订单”列表可查看订单状态</string>
    <string name="pay_status_off">支付失败</string>
    <string name="pay_status_ongoing">支付确认中</string>
    <string name="eligible_on">符合免单要求，可立即参团</string>
    <string name="eligible_off">不符合免单条件，支付参团费用立即参团</string>
    <string name="system_message">系统消息</string>
    <string name="system_service">客服</string>
    <string name="group_chat">团队群聊</string>
    <string name="agree_to_add">同意添加</string>
    <string name="refused_to">拒绝</string>
    <string name="add_friend_validation">填写好友验证信息</string>
    <string name="friend_requests">好友申请</string>
    <string name="to_apply_for_a_friend">申请好友</string>
    <string name="add_friend_about">请求加您为好友</string>
    <string name="already_you_friends">已经是您的好友</string>
    <string name="already_refused_to_you">已拒绝您添加</string>
    <string name="add_successfully">添加成功</string>
    <string name="commite_successfully">提交成功</string>
    <string name="new_message">新消息通知</string>
    <string name="progress">加载中...</string>
</resources>